# network-security-ML-simplePipeline

./: .gitignore  Dockerfile  README.md  app.py  main.py  mlflow.db  push_data.py  pyproject.toml  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  setup.py  template.py  test_gcp.py  test_mongodb.py
.github/workflows/: main.yaml
config/: config.yaml
src/network_security/cloud/: gcs_syncer.py  s3_syncer.py
src/network_security/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
src/network_security/constants/training_pipeline/: __init__.py
src/network_security/entity/: artifact_config.py  entity_config.py
src/network_security/exception/: exception.py
src/network_security/logging/: logger.py
src/network_security/pipeline/: training_pipeline.py
src/network_security/utils/main_utils/: utils.py
src/network_security/utils/ml_utils/metric/: classification_metric.py
src/network_security/utils/ml_utils/model/: estimator.py
templates/: index.html
