[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "network_security"
version = "0.1.0"
description = "ML pipeline for network intrusion detection"
authors = [{ name = "MKhai Truong" }]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]